remove unused vars/mixins

--- a/rca/static_src/sass/components/_video-modal.scss
+++ b/rca/static_src/sass/components/_video-modal.scss
@@ -29,8 +29,8 @@
     &__close {
         position: absolute;
         display: inline-block;
-        top: $grid;
-        right: $grid;
+        top: 20px;
+        right: 20px;
         z-index: 2;
     }
 }
