--- a/rca/static_src/sass/components/_cookie-message.scss
+++ b/rca/static_src/sass/components/_cookie-message.scss
@@ -31,7 +31,7 @@
         line-height: 1.4;
         color: $color--black;
         background-color: $color--white;
-        border: 1px solid $color--border;
+        border: 1px solid $color--dark-grey;
         border-radius: 5px;
         padding: 0 10px 10px;
 
