--- a/rca/static_src/sass/base/_typography.scss
+++ b/rca/static_src/sass/base/_typography.scss
@@ -8,7 +8,7 @@
 html {
     font-size: ($base-font-size / 16px) * 100%;
     line-height: $base-line-height / $base-font-size;
-    color: $color--default;
+    color: $color--primary;
 }
 
 /* ============================================
