--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -12,8 +12,8 @@ $color--tertiary: $color--orange;
 
 // --------------------------------- Fonts --------------------------------------
 
-$font--primary: Sans-Serif;
-$font--secondary: Sans-Serif;
+$font--primary: 'Benton Sans', 'BentonSans', 'Helvetica Neue', Arial, Helvetica, Sans-Serif;
+$font--secondary: 'Benton Sans Medium', 'BentonSans-Medium', 'Helvetica Neue', Arial, Helvetica, Sans-Serif;
 
 // Font weights
 $weight--bold: 700;
@@ -24,26 +24,57 @@ $weight--light: 200;
 
 // Font sizes
 $base-font-size: 16px;
-$base-line-height: 25px;
-$font-sizes: (
-    default: $base-font-size,
-    xxl: 36px,
+
+// Line heights
+$line-height-large: 140%;
+$line-height-medium: 122%;
+$line-height-small: 120%;
+$base-line-height: 120%;
+
+
+$large-font-sizes: (
+    xxxxl: 90px,
+    xxxl: 76px,
+    xxl: 64px,
+    xl: 46px,
+    l: 32px,
+    m: 30px,
+    s: 24px,
+    xs: 18px,
+    xxs: 14px,
+    xxxs: 12px,
+);
+
+$medium-font-sizes: (
+    xxxxl: 78px,
+    xxxl: 68px,
+    xxl: 52px,
+    xl: 38px,
+    l: 28px,
+    m: 26px,
+    s: 20px,
+    xs: 16px,
+    xxs: 14px,
+    xxxs: 12px,
+);
+
+$small-font-sizes: (
+    xxxxl: 44px,
+    xxxl: 38px,
+    xxl: 32px,
     xl: 28px,
-    l: 21px,
-    m: 18px,
-    s: 15px,
+    l: 24px,
+    m: 22px,
+    s: 18px,
     xs: 14px,
-    xxs: 12px,
+    xxs: 14px, // no value in styleguide
+    xxxs: 12px,
 );
 
 // --------------------------------- Breakpoints --------------------------------------
 $breakpoints: (
-    'mob-portrait' '(min-width: 320px)',
-    'mob-landscape' '(min-width: 480px)',
-    'tablet-portrait' '(min-width: 768px)',
-    'tablet-landscape' '(min-width: 1024px)',
-    'desktop' '(min-width: 1280px)',
-    'desktop-wide' '(min-width: 2556px)'
+    'medium' '(min-width: 599px)',
+    'large' '(min-width: 1023px)',
 );
 
 // --------------------------------- Grid Dimensions --------------------------------------
