add heading link variation

--- a/rca/static_src/sass/components/_heading.scss
+++ b/rca/static_src/sass/components/_heading.scss
@@ -30,4 +30,8 @@
         @include font-size(s);
         line-height: $line-height-small;
     }
+
+    &--link {
+        font-family: $font--secondary;
+    }
 }
