remove flex wrapper

--- a/rca/project_styleguide/templates/patterns/pages/standardpages/information_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/standardpages/information_page.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <div class="wrapper wrapper--flex">
+    <div class="wrapper">
         <section class="section section--main">
 
             {% block breadcrumbs %}
