--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -25,6 +25,7 @@
 @import 'components/grid';
 @import 'components/heading';
 @import 'components/icon';
+@import 'components/link';
 @import 'components/nav';
 @import 'components/progress-bar';
 @import 'components/responsive-object';
