--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -78,9 +78,10 @@ $breakpoints: (
 
 // --------------------------------- Grid Dimensions --------------------------------------
 
+$grid: 20px;
+
 // Wrappers
-$site-width: 1280px;
-$wrapper--small: 790px;
+$site-width: 1440px;
 
 // --------------------------------- Transitions --------------------------------------
 
