Feature/fe setup (#1)
* remove unused vars/mixins
* adds colour hexes
* adds fonts and typography scales
* update base font size
* add svgs
* adds link styles
* add app divs and update base container styles

--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -1,6 +1,6 @@
 {% load static wagtailuserbar wagtailcore_tags wagtailimages_tags navigation_tags util_tags %}
 <!doctype html>
-<html class="no-js" lang="en-US">
+<html lang="en-US">
     <head>
         {# TODO fallbacks if page is not defined e.g. for 404 page #}
         <meta charset="utf-8" />
@@ -18,31 +18,36 @@
         {% endif %}
 
         {% block meta_tags %}{% endblock %}
-
+        <link rel="stylesheet" type="text/css" href="//cloud.webtype.com/css/2dc77ba2-6663-49b6-9e6c-aa009c06648b.css" />
         <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
         {% block extra_css %}{% endblock %}
     </head>
 
-    <body class="{% block body_class %}template-{{ page.get_verbose_name|slugify }}{% endblock %}">
+    <body class="app {% block body_class %}template-{{ page.get_verbose_name|slugify }}{% endblock %}">
         {% block body_top %}{% endblock %}
 
-        {% include "patterns/atoms/sprites/sprites.html" %}
+        <div class="app__container">
+            {% include "patterns/atoms/sprites/sprites.html" %}
 
-        {% wagtailuserbar %}
+            {% wagtailuserbar %}
 
-        {% block header %}{% endblock %}
+            <header class="app__header">
+                {% block header %}{% endblock %}
+            </header>
 
-        <main class="wrapper wrapper--large wrapper--main">
-            {% block content %}
-                {{ pattern_library_rendered_pattern }}
-            {% endblock %}
-        </main>
+            <main class="app__content">
+                {% block content %}
+                    {{ pattern_library_rendered_pattern }}
+                {% endblock %}
+            </main>
 
-        {% block footer %}{% endblock %}
+            <footer class="app__footer">
+                {% block footer %}{% endblock %}
+            </footer>
+        </div>
 
         <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
-
         {% block extra_js %}{% endblock %}
     </body>
 </html>
