--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -1,37 +1,19 @@
 // --------------------------------- Colors -------------------------------------
-$color--primary: #6a737c;
-$color--secondary: #eaeaea;
-$color--tertiary: #f9f9f9;
 
+$color--black: #000;
 $color--white: #fff;
-$color--black: #141414;
-$color--border: rgba($color--black, 0.2);
+$color--orange: #ff5d1c;
+$color--light-grey: #797979;
+$color--dark-grey: #676767;
 
-$color--white: #fff;
-$color--black: #141414;
-
-$color--default: $color--black;
-
-// Button colours
-$button-colours: (
-    primary: (
-        bg: $color--primary,
-        color: #fff,
-    ),
-    secondary: (
-        bg: $color--secondary,
-        color: #000,
-    ),
-    tertiary: (
-        bg: $color--tertiary,
-        color: #000,
-    ),
-);
+$color--primary: $color--black;
+$color--secondary: $color--white;
+$color--tertiary: $color--orange;
 
 // --------------------------------- Fonts --------------------------------------
 
-$font--primary: Sans-Serif;
-$font--secondary: Sans-Serif;
+$font--primary: 'Benton Sans', 'BentonSans', 'Helvetica Neue', Arial, Helvetica, Sans-Serif;
+$font--secondary: 'Benton Sans Medium', 'BentonSans-Medium', 'Helvetica Neue', Arial, Helvetica, Sans-Serif;
 
 // Font weights
 $weight--bold: 700;
@@ -40,51 +22,66 @@ $weight--medium: 500;
 $weight--normal: 400;
 $weight--light: 200;
 
+// Line heights
+$line-height-large: 140%;
+$line-height-medium: 122%;
+$line-height-small: 120%;
+$base-line-height: 120%;
+
 // Font sizes
-$base-font-size: 16px;
-$base-line-height: 25px;
-$font-sizes: (
-    default: $base-font-size,
-    xxl: 36px,
+$base-font-size: 18px;
+
+$large-font-sizes: (
+    xxxxl: 90px,
+    xxxl: 76px,
+    xxl: 64px,
+    xl: 46px,
+    l: 32px,
+    m: 30px,
+    s: 24px,
+    xs: 18px,
+    xxs: 14px,
+    xxxs: 12px,
+);
+
+$medium-font-sizes: (
+    xxxxl: 78px,
+    xxxl: 68px,
+    xxl: 52px,
+    xl: 38px,
+    l: 28px,
+    m: 26px,
+    s: 20px,
+    xs: 16px,
+    xxs: 14px,
+    xxxs: 12px,
+);
+
+$small-font-sizes: (
+    xxxxl: 44px,
+    xxxl: 38px,
+    xxl: 32px,
     xl: 28px,
-    l: 21px,
-    m: 18px,
-    s: 15px,
+    l: 24px,
+    m: 22px,
+    s: 18px,
     xs: 14px,
-    xxs: 12px,
+    xxs: 14px, // no value in styleguide
+    xxxs: 12px,
 );
 
 // --------------------------------- Breakpoints --------------------------------------
-// Ensure that all breakpoints are duplicated in the gutters array
-
 $breakpoints: (
-    'mob-portrait' '(min-width: 320px)',
-    'mob-landscape' '(min-width: 480px)',
-    'tablet-portrait' '(min-width: 768px)',
-    'tablet-landscape' '(min-width: 1024px)',
-    'desktop' '(min-width: 1280px)',
-    'desktop-wide' '(min-width: 2556px)'
+    'medium' '(min-width: 599px)',
+    'large' '(min-width: 1023px)',
 );
 
 // --------------------------------- Grid Dimensions --------------------------------------
 
-// Wrappers
-$site-width: 1280px;
-$wrapper--small: 790px;
-
-// Grid setup
 $grid: 20px;
 
-// These should match the breakpoints array
-$gutters: (
-    'default': $grid,
-    'mob-portrait': $grid,
-    'mob-landscape': $grid,
-    'tablet-portrait': $grid,
-    'tablet-landscape': $grid * 1.25,
-    'desktop': $grid * 1.25,
-    'desktop-wide': $grid * 1.5,
-) !default;
+// Wrappers
+$site-width: 1440px;
 
 // --------------------------------- Transitions --------------------------------------
 
