--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -24,7 +24,6 @@
         {% block extra_css %}{% endblock %}
     </head>
 
-    <body class="app {% block body_class %}template-{{ page.get_verbose_name|slugify }}{% endblock %}">
     <body class="app {% block body_class %}app--{{ page.get_verbose_name|slugify }}{% endblock %}">
         {% block body_top %}{% endblock %}
 
@@ -36,6 +35,36 @@
             <header class="app__header">
                 {% block header %}{% endblock %}
             </header>
+
+            <nav class="app__navigation">
+                <section class="header__menus header__menus--desktop">
+                    <div class="header__inner--top">
+                        {% secondarynav %}
+                        <form action="{% url 'search' %}" method="get" role="search" class="form form--header-search">
+                            <input class="input" type="text" placeholder="Search…" name="query"{% if search_query %} value="{{ search_query }}{% endif %}">
+                            <button class="button" type="submit">
+                                <svg class="icon icon--magnifying-glass"><use xlink:href="#magnifying-glass"></use></svg>
+                            </button>
+                        </form>
+                    </div>
+
+                    {% primarynav %}
+                </section>
+
+                <section class="header__menus header__menus--mobile" data-mobile-menu>
+                    {% primarynav %}
+                </section>
+            </nav>
+
+            <div class="app__search">
+                <form class="form form--search">
+                    <div class="form__item">
+                        <label for="search">Search</label>
+                        <input type="input" id="search" name="search" placeholder="Enter search term">
+                    </div>
+                    <button class="button">Search</button>
+                </form>
+            </div>
 
             <main class="app__content">
                 {% block content %}
@@ -52,4 +81,3 @@
         {% block extra_js %}{% endblock %}
     </body>
 </html>
-
