--- a/rca/project_styleguide/templates/patterns/base_page.html
+++ b/rca/project_styleguide/templates/patterns/base_page.html
@@ -59,10 +59,13 @@
 
 {% block header %}
     <header class="header">
-        <div class="header__inner wrapper wrapper--large">
-            <a href="{% slugurl 'home' %}">
-                <img class="header__logo" src="https://placehold.it/150x100" alt="Logo for RCA Website">
-            </a>
+        <a class="logo" href="{% slugurl 'home' %}">
+            <svg class="logo__image" width="162" height="70">
+                <use xlink:href="#logo" />
+            </svg>
+        </a>
+
+        <div class="header__navigation-toggle">
 
             <div class="header__menu-toggle">
                 <span>Menu</span>
@@ -74,24 +77,25 @@
                 </button>
             </div>
 
-            <section class="header__menus header__menus--desktop">
-                <div class="header__inner--top">
-                    {% secondarynav %}
-                    <form action="{% url 'search' %}" method="get" role="search" class="form form--header-search">
-                        <input class="input" type="text" placeholder="Search…" name="query"{% if search_query %} value="{{ search_query }}{% endif %}">
-                        <button class="button" type="submit">
-                            <svg class="icon icon--magnifying-glass"><use xlink:href="#magnifying-glass"></use></svg>
-                        </button>
-                    </form>
-                </div>
+            <div class="header__search-toggle">
+                <svg class="search__toggle" width="24" height="23">
+                    <use xlink:href="#magnifying-glass" />
+                </svg>
+            </div>
 
-                {% primarynav %}
-            </section>
-
-            <section class="header__menus header__menus--mobile" data-mobile-menu>
-                {% primarynav %}
-            </section>
         </div>
+
+        <nav class="header__audience-nav">
+            <div class="audience-nav-item">
+                <a class="audience-nav-item__link" href="#">Study at RCA</a>
+            </div>
+            <div class="audience-nav-item">
+                <a class="audience-nav-item__link" href="#">Research and Innovation</a>
+            </div>
+            <div class="audience-nav-item">
+                <a class="audience-nav-item__link" href="#">Life at RCA</a>
+            </div>
+        </nav>
     </header>
 {% endblock header %}
 
@@ -135,4 +139,3 @@
 
     {% include "patterns/molecules/cookie-message/cookie-message.html" %}
 {% endblock footer %}
-
