put grid spacing into a mixin and update grid line colour

--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -27,7 +27,7 @@
     <body class="app {% block body_class %}template-{{ page.get_verbose_name|slugify }}{% endblock %}">
         {% block body_top %}{% endblock %}
         <div class="app__container">
-            <div class="app__grid-lines">
+            <div class="app__grid-lines" aria-hidden="true">
                 <div></div>
                 <div></div>
                 <div></div>
