--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -6,6 +6,9 @@ $color--orange: #ff5d1c;
 $color--light-grey: #797979;
 $color--dark-grey: #676767;
 
+$color--white-12: rgba(255, 255, 255, 0.12);
+$color--black-80: rgba(0, 0, 0, 0.8);
+
 $color--primary: $color--black;
 $color--secondary: $color--white;
 $color--tertiary: $color--orange;
