--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -14,6 +14,7 @@
 // Components
 @import 'components/accordion';
 @import 'components/app';
+@import 'components/audience-nav-item';
 @import 'components/button';
 @import 'components/blockquote';
 @import 'components/body';
@@ -27,6 +28,7 @@
 @import 'components/heading';
 @import 'components/icon';
 @import 'components/link';
+@import 'components/logo';
 @import 'components/nav';
 @import 'components/progress-bar';
 @import 'components/responsive-object';
