remove app container and constrain grid

--- a/rca/static_src/sass/abstracts/_mixins.scss
+++ b/rca/static_src/sass/abstracts/_mixins.scss
@@ -135,6 +135,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 $grid;
+    max-width: $site-width;
+    margin: 0 auto;
 
     @include media-query(medium) {
         padding: 0 $grid * 3;
