Adding html font size to ensure rem works

--- a/rca/static_src/sass/base/_typography.scss
+++ b/rca/static_src/sass/base/_typography.scss
@@ -3,7 +3,16 @@
 \*------------------------------------*/
 
 html {
-    @include font-size(xs);
+    font-size: (map-get($small-font-sizes, xs) / 16px) * 100%;
+
+    @include media-query(medium) {
+        font-size: (map-get($medium-font-sizes, xs) / 16px) * 100%;
+    }
+
+    @include media-query(large) {
+        font-size: (map-get($large-font-sizes, xs) / 16px) * 100%;
+    }
+
     line-height: 1.4;
     color: $color--primary;
 }
