--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -85,6 +85,21 @@ $breakpoints: (
     'large' '(min-width: 1023px)',
 );
 
+// --------------------------------- Z-indices --------------------------------------
+
+$z-index: (
+    free1: 10,
+    free2: 20,
+    free3: 30,
+    free4: 40,
+    header: 50,
+    free5: 60,
+    free6: 70,
+    free7: 80,
+    gridlines: 90,
+    modal: 100
+);
+
 // --------------------------------- Grid Dimensions --------------------------------------
 
 $grid: 20px;
