--- a/rca/static_src/sass/abstracts/_functions.scss
+++ b/rca/static_src/sass/abstracts/_functions.scss
@@ -7,3 +7,8 @@
 @function rem($px, $context: $base-font-size) {
     @return #{strip-unit($px / strip-unit($context))}rem;
 }
+
+// Map z-index keys
+@function z-index($key) {
+    @return map-get($z-index, $key);
+}
