--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -1,4 +1,5 @@
 .header {
+    @include z-index(header);
     position: fixed;
     width: 100%;
     top: 0;
@@ -8,6 +9,17 @@
     &__container {
         max-width: $site-width;
         margin: 0 auto;
+        padding-top: ($gutter * 2);
+        padding-bottom: ($gutter);
+    }
+
+    &__navigation-toggle {
+        display: flex;
+        align-items: flex-start;
+    }
+
+    &__menu-toggle {
+        margin-right: ($gutter);
     }
 
     .headroom--not-top & {
