Hide audience-nav-item on mobile/tablet

--- a/rca/static_src/sass/components/_audience-nav-item.scss
+++ b/rca/static_src/sass/components/_audience-nav-item.scss
@@ -46,4 +46,12 @@
         }
 
     }
+
+    .header & {
+        display: none;
+
+        @include media-query(large) {
+            display: block;
+        }
+    }
 }
