Burger and search toggle labels

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -18,6 +18,7 @@
 @import 'components/button';
 @import 'components/blockquote';
 @import 'components/body';
+@import 'components/burger';
 @import 'components/call-to-action';
 @import 'components/cookie-message';
 @import 'components/card';
@@ -33,6 +34,7 @@
 @import 'components/progress-bar';
 @import 'components/responsive-object';
 @import 'components/rich-text';
+@import 'components/search-toggle';
 @import 'components/section';
 @import 'components/video-modal';
 @import 'components/wrapper';
