--- a/rca/project_styleguide/templates/patterns/organisms/header/header.html
+++ b/rca/project_styleguide/templates/patterns/organisms/header/header.html
@@ -7,20 +7,21 @@
 
         <div class="header__navigation-toggle">
 
-            <div class="header__menu-toggle">
-                <span>Menu</span>
-                <button class="button button-menu-toggle" data-mobile-menu-toggle aria-haspopup="true" aria-label="Mobile menu toggle">
-                    <span class="button-menu-toggle__line"></span>
-                    <span class="button-menu-toggle__line"></span>
-                    <span class="button-menu-toggle__line"></span>
-                    <span class="button-menu-toggle__line"></span>
+            <div class="header__menu-toggle burger">
+                <button class="burger__toggle" data-mobile-menu-toggle aria-haspopup="true" aria-label="Mobile menu toggle">
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
                 </button>
+                <div class="burger__toggle-label">Menu</div>
             </div>
 
-            <div class="header__search-toggle">
-                <svg class="search__toggle" width="24" height="23">
+            <div class="header__search-toggle search-toggle">
+                <svg class="search-toggle__icon" width="24" height="23">
                     <use xlink:href="#magnifying-glass" />
                 </svg>
+                <div class="search-toggle__label">Search</div>
             </div>
 
         </div>
