--- a/rca/static_src/sass/components/_logo.scss
+++ b/rca/static_src/sass/components/_logo.scss
@@ -1,4 +1,5 @@
 .logo {
+    $root: &;
     display: block;
 
     &__image {
@@ -12,6 +13,22 @@
 
         @include media-query(medium) {
             width: 162px;
+        }
+
+    }
+
+    .header--dark-bg & {
+
+        #{$root}__image {
+            fill: $color--white;
+        }
+
+    }
+
+    .header--light-bg & {
+
+        #{$root}__image {
+            fill: $color--black;
         }
 
     }
