--- a/rca/static_src/sass/components/_search-toggle.scss
+++ b/rca/static_src/sass/components/_search-toggle.scss
@@ -15,12 +15,20 @@
             color: $color--white;
         }
 
+        #{$root}__icon {
+            fill: $color--white;
+        }
+
     }
 
     .header--light-bg & {
 
         #{$root}__label {
             color: $color--black;
+        }
+
+        #{$root}__icon {
+            fill: $color--black;
         }
 
     }
