--- a/rca/project_styleguide/templates/patterns/organisms/header/header.html
+++ b/rca/project_styleguide/templates/patterns/organisms/header/header.html
@@ -1,4 +1,4 @@
-<header class="header header--dark-bg"> {# modifier needs to be set by BE #}
+<div class="header header--dark-bg"> {# modifier needs to be set by BE #}
     <div class="header__container grid">
 
         <div class="header__logo">
@@ -33,4 +33,4 @@
     </div>
 
 
-</header>
+</div>
