Magic numbers for header height

--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -111,3 +111,9 @@ $site-width: 1440px;
 // --------------------------------- Transitions --------------------------------------
 
 $transition: 0.25s ease-out;
+
+// --------------------------------- Magic numbers --------------------------------------
+
+$header-height-small: 130px;
+$header-height-medium: 130px;
+$header-height-large: 130px;
