--- a/rca/static_src/sass/components/_app.scss
+++ b/rca/static_src/sass/components/_app.scss
@@ -1,4 +1,13 @@
 .app {
+    padding-top: $header-height-small;
+
+    @include media-query(medium) {
+        padding-top: $header-height-medium;
+    }
+
+    @include media-query(large) {
+        padding-top: $header-height-large;
+    }
 
     &__grid-lines {
         @include z-index(gridlines);
