Footer link item and social item components

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -23,6 +23,7 @@
 @import 'components/cookie-message';
 @import 'components/card';
 @import 'components/carousel';
+@import 'components/footer-link-item';
 @import 'components/form';
 @import 'components/form-item';
 @import 'components/grid';
@@ -36,6 +37,7 @@
 @import 'components/rich-text';
 @import 'components/search-toggle';
 @import 'components/section';
+@import 'components/social-item';
 @import 'components/video-modal';
 @import 'components/wrapper';
 
